[FIX] website, web: Fix background layer elsewhere than in a section
Before this commit, the elements (other than section) that have the
background layer options (shape, color filter, etc.) did not have the
relative position added on their children. All the children were
hidden behind the layer element which is in absolute position.

task-2312878

--- a/addons/web_editor/static/src/scss/web_editor.common.scss
+++ b/addons/web_editor/static/src/scss/web_editor.common.scss
@@ -725,14 +725,18 @@ blockquote {
     }
 }
 %o-we-background-layer {
-    @include o-position-absolute(0, 0, 0, 0);
+    position: absolute !important;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
     display: block;
     overflow: hidden;
     background-repeat: no-repeat;
     pointer-events: none;
 }
 
-section {
+section, .oe_img_bg, [data-oe-shape-data], .o_background_video, .parallax {
     @extend %o-we-background-layer-parent;
 }
 .o_we_bg_filter {
